# nix-config

./: .envrc  .gitignore  .stylua.toml  README.md  STRUCTURE.md  flake.nix  generate-topology.nix  globals.nix  hosts.toml  make-honey.nix  make-mead.nix  make-moonshine.nix  make-shanty.nix  pasteurize.nix
apps/: default.nix  format-secrets.nix  rekey-output-derivation.nix  rekey.nix  show-wireguard-qr.nix
config/: boot.nix  default.nix  home-manager.nix  impermanence.nix  inputrc  installer.nix  issue.nix  net.nix  nftables.nix  nix.nix  resolved.nix  secrets.nix  ssh.nix  system.nix  topology.nix  users.nix
core/: default.nix  inputrc.nix  issue.nix  nix.nix  ssh.nix  xdg.nix
dev/: default.nix
flake/: agenix-rekey.nix  devshell.nix  globals.nix  hosts.nix  iso.nix  pkgs.nix
hardware/: yubikey.nix  zfs.nix
lib/: default.nix  disko.nix  misc.nix  net.nix  secrets.nix  types.nix  wireguard.nix
modules/: acme-wildcard.nix  actual.nix  affine.nix  backups.nix  d2diag.nix  default.nix  deterministic-ids.nix  distributed-config.nix  efi.nix  ente.nix  esphome.nix  extra.nix  firefly-pico.nix  firezone-gateways.nix  firezone-relay.nix  firezone-server.nix  globals.nix  hostapd.nix  immich.nix  initrd-ssh.nix  interface-naming.nix  kanidm.nix  laptop.nix  mealie.nix  meta.nix  microvms.nix  netbird-client.nix  nginx-upstream-monitoring.nix  nginx.nix  nvidia.nix  oa2p.nix  oauth2-proxy.nix  promtail.nix  provision.exs  (+12 more)
users/myuser/graphical/i3-per-workspace-layout/: .gitignore  Cargo.toml  rustfmt.toml
users/myuser/graphical/i3-per-workspace-layout/src/: main.rs
(+1294 files in other folders)
